# Diplom-Data

./: .env.example  .gitignore  AUTOMATED_DATA_COLLECTION_IMPLEMENTATION.md  DATA_COLLECTION_CHANGELOG.md  DEPLOYMENT_GUIDE.md  PROJECT_ALIGNMENT_SUMMARY.md  QUICK_REFERENCE.md  README.md  diplom dulguun.docx  index.html  metadata.json  package-lock.json  package.json
beta/: .env.example  .env.production  API_USAGE_GUIDE.md  DEPLOYMENT_PACKAGE.md  FIREBASE_CREDENTIALS_SETUP.md  MANUAL_LOGIN_GUIDE.md  ML_CLOUD_GUIDE.md  QUICK_REFERENCE.md  README.md  RENDER_CHECKLIST.md  RENDER_DEPLOYMENT_GUIDE.md  USAGE_GUIDE.md  api_server.py  check_db.py  example.py  example_edge_scraper.py  export_comments_to_text.py  fb_credentials.py  generate_mock_posts.py  init_project.py  manual_login.py  pages.txt  pyproject.toml  render.yaml  requirements.txt  run_api_server.bat  run_fb_scraper.bat  run_local_server.py  scraper_cli.py  validate_deployment.py  verify_access.py  view_comments.bat  view_comments.py
beta/automation/: auto_scraper.py
beta/backup/: COMMENT_SCRAPING.md  README.md.bak  README.md.new  SETUP_GUIDE.md.new  SMART_SCRAPER_README.md  USAGE_GUIDE.md.new  check_comments.py  comment_fix.py  comment_scraper.py  export_comments_to_text.bat  export_comments_to_text.py  facebook_scraper.py  facebook_scraper_all.py  facebook_scraper_all.py.backup  facebook_scraper_all.py.new  facebook_scraper_fixed.py  facebook_scraper_smart.py  fix_comments.bat  fix_comments.py  manual_login.bat  manual_login.py  remove_duplicates.bat  remove_duplicates.py  run_comment_scraper.bat  run_scraper.bat  (+16 more)
(+1826 files in other folders)
