[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facebook_scraper"
version = "0.1.0"
description = "Facebook content scraper"
authors = [
    {name = "AI Assistant", email = "ai@example.com"}
]
dependencies = [
    "selenium>=4.10.0",
    "webdriver-manager>=3.9.1",
    "sqlalchemy>=2.0.17",
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "tqdm>=4.65.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "pillow>=10.0.0",
    "pytest>=7.4.0"
]

[tool.setuptools]
packages = ["scraper", "automation", "content_manager", "utils", "db"]
